--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "devDependencies": {
     "prettier": "^2.7.1",
-    "prettier-plugin-astro": "^0.5.4",
-    "prettier-plugin-tailwindcss": "^0.1.13"
+    "prettier-plugin-astro": "^0.5.4"
   }
 }
