--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^2.0.1",
     "astro": "^1.2.6",
+    "slugify": "^1.6.5",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
